# myinvois

./: README.md  after_step_6.xml  create.xml  final_can.xml  finalzatcaxml.xml  invoice_with_extensions.xml  output.xml  output12.xml  output123.xml  output1234.xml  processed_output.xml  pyproject.toml  signed_finalzatcaxml.xml  structured_invoice.xml  version-2.1md
.github/workflows/: frappe-ci.yml  frappe-semgrep.yml  semgrep.yml
myinvois_erpgulf/: 1.0.1.md  cert.pem  final_signed_xml.xml  final_signed_xml1111.xml  hooks.py  modules.txt
myinvois_erpgulf/fixtures/: client_script.json  custom_field.json  desktop_icon.json  print_format.json  property_setter.json  workspace.json
myinvois_erpgulf/myinvois_erpgulf/: EINVCERT.PFX  INHQ-003103.xml  THC SDN. BHD.p12  cancel_doc.py  certificate.pem  check.py  consolidate_invoice.py  crctsign.xml  createxml.py  csr.py  get_status.py  getalldoctypes.py  intermediatorylogin.py  newtest.py  newtest.xml  original.py  output.xml  privatekey.pem  publickey.pem  purchase_invoice.py  sample_signed document.xml  search_taxpayer.py  signature.py  submit_purchase.py  submitdoc.py  taxpayerlogin.py  test.py  testsig.py  utils.py
myinvois_erpgulf/myinvois_erpgulf/custom/: purchase_invoice.json  purchase_invoice_item.json  sales_invoice.json  sales_invoice_item.json
myinvois_erpgulf/myinvois_erpgulf/report/: __init__.py
myinvois_erpgulf/overrides/: sales_invoice_override.py
myinvois_erpgulf/public/js/: badge_purchase.js  badge_sale.js  company.js  customer.js  puchase.js  realodsale.js  sales.js  (+1 more)
myinvois_erpgulf/www/: 12.xml
(+24 files in other folders)
