[project]
name = "myinvois_erpgulf"
version = "2.1"
authors = [
    { name = "ERPGulf", email = "support@erpgulf.com"}
]
description = "MyInvoice - E-Invoice for Malaysia"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
  "frappe>=14.0.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.bench.frappe-dependencies]
frappe = ">=14.0.0"