[project]
name = "myinvois_erpgulf"
#version = "2.1"
authors = [
    { name = "ERPGulf", email = "support@erpgulf.com"}
]
description = "MyInvoice - E-Invoice for Malaysia"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
  "pypika @ git+https://github.com/frappe/pypika@2c50e6142b2d61d2d243e466fdd5dc03b3d918f2",
  "gunicorn @ git+https://github.com/frappe/gunicorn@bb554053bb87218120d76ab6676af7015680e8b6"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.bench.frappe-dependencies]
frappe = ">=14.0.0,<17.0.0"